--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     </nav>
     <div class="container">
     <div class="row pt-5">
-        <div class="col-md-3 pt-5">
+        <div class="col-md-3 col-xs-6 pt-5">
             <img class="" src="images/mypic.jpg" width="250px">
         </div>
-        <div class="col-md-9 pt-5">
+        <div class="col-md-9 col-sx-6 pt-5">
             <p class='pt-2'>
               Hi! I am an aspiring Software Developer. I am currently pursuing Masters in CS from Georgia Tech University, US. I also hold a Bachelor's Degree
               in Electronics and Telecommunication Engineering from Goa College of Engineering, India.
