--- a/index.html
+++ b/index.html
@@ -9,31 +9,41 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg fixed-top bg-light">
-      <div class="container-fluid">
-          <a class="navbar-brand" href="mywebsite.html">
-          <img src="images/icon.png" alt="" width="24" height="24" class="d-inline-block align-text-top"> Eshita Sangodkar </a>
 
-          <ul class='navbar-nav'>
-            <li class='nav-item'>
-              <a class="nav-link active" aria-current="page" href="#">About</a>
-            </li>
-            <li>
-              <a class="nav-link active" aria-current="page" href="#">Projects</a>
-            </li>
-            <li class='nav-item'>
-              <a class="nav-link active" aria-current="page" href="#">Education</a>
-            </li>
-            <li class='nav-item'>
-              <a class="nav-link active" aria-current="page" href="#">Resume</a>
-            </li>
-          </ul>
-        </div>
-    </nav>
+    <nav class="navbar navbar-expand-lg bg-light fixed-top">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">
+        <img src="images/icon.png" alt="" width="24" height="24" class="d-inline-block align-text-top"> Eshita Sangodkar </a>
+
+        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        </button>
+
+
+        <div class="collapse navbar-collapse">
+            <ul class='navbar-nav ml-auto'>
+              <li class='nav-item active'>
+                <a class="nav-link active" aria-current="page" href="#">About</a>
+              </li>
+              <li>
+                <a class="nav-link active" aria-current="page" href="#projects">Projects</a>
+              </li>
+              <li class='nav-item'>
+                <a class="nav-link active" aria-current="page" href="#education">Education</a>
+              </li>
+              <li class='nav-item'>
+                <a class="nav-link active" aria-current="page" href="#">Resume</a>
+              </li>
+            </ul>
+          </div>
+    </div>
+  </nav>
+
     <div class="container">
     <div class="row pt-5">
-        <div class="col-md-3 col-xs-6 pt-5">
-            <img class="" src="images/mypic.jpg" width="250px">
+        <div class="col-md-3 col-xs-6 pt-5 text-center">
+            <img class="img-thumbnail" src="images/mypic.jpg" width="250px">
         </div>
         <div class="col-md-9 col-sx-6 pt-5">
             <p class='pt-2'>
@@ -55,9 +65,9 @@
   </div>
 
 
-  <div class="container">
+  <div class="container"  id='projects'>
   <div class="row pt-4">
-    <div class="col-md-12">
+    <div class="col-md-12 col-xs-12">
       <hr>
       <h3 class='my-4 bg-light text-secondary'>Projects</h3>
     </div>
@@ -66,8 +76,8 @@
 
   <div class="container">
     <div class="row pt-4">
-      <div class="col-md-6 pt-5">
-        <img src="images/chips-game.png" alt="">
+      <div class="col-md-6 col-sm-12 pt-5">
+        <img class='img-thumbnail' src="images/chips-game.png" width="550" height="500">
         <h3 class='my-4'>
           Chips - in - a - row!
         </h3>
@@ -77,13 +87,132 @@
           This game is played by two players alternatively. Each player has to drop a chip in a 9x9 matrix.
           The player who drops four consecutive chips wins the game!
         </p>
-        <a class="btn btn-md btn-outline-secondary" href="https://github.com/es0811/Connect-Four-Chips-Game" target="_blank"><i class="fab fa-github"></i> Source</a>
+        <p>
+          <strong>
+            Tech Stack: </strong> Javascript, HTML, CSS
+        </p>
+        <div class="container text-center">
+
+
+          <a class="btn btn-md btn-outline-secondary" href="https://github.com/es0811/Connect-Four-Chips-Game" target="_blank"><i class="fab fa-github"></i> Source</a>
+      </div>
       </div>
 
-      <div class="col-md-6">
+      <div class="col-md-6 col-sm-12 pt-5">
+        <img class='img-thumbnail' src="images/php.png" width="550" height="500">
+        <h3 class='my-4'>
+          Content Management System
+        </h3>
+        <p>
+          This application is a part of the project I had to implement for the Udemy Course 'The Complete PHP MYSQL Course by Jazeb Akram'. This project is currently a work in progress.
+          With this application, various users can register with the system. All the details are stored in a MySQL database. The users can post blogs, search through the blogs,
+          delete posts, get detailed descriptions about each post etc.
+        </p>
+        <p>
+          <strong>
+            Tech Stack: </strong> PHP, SQL, XAMPP Server, Javascript, HTML, CSS, Bootstrap
+        </p>
+        <div class="container text-center">
+          <a class="btn btn-md btn-outline-secondary" href="https://github.com/es0811/CMS" target="_blank"><i class="fab fa-github"></i> Source</a>
+      </div>
       </div>
 
-      <div class="col-md-6">
+      <div class="col-md-6 col-sm-12 pt-5">
+        <img class='img-thumbnail' src="images/grocery-service.png" width="550" height="500">
+        <h3 class='my-4'>
+          Grocery Service Application
+        </h3>
+        <p>
+          I and me team developed this application for course 6310 Software Architecture & Design in the Georgia Tech CS Masters Program.
+          The implementation included creating APIs for registering stores, users, selling and purshaing items, user authentication, authorization and a postman interface.
+          We had to design the architecture, interface and data structure modeling.
+        </p>
+        <p>
+          <strong>
+            Tech Stack: </strong> Java, MySQL, Postman Collection, JSON, IntelliJ
+        </p>
+        <div class="container text-center fw-light text-sm-start fs-6 fst-italic">
+          <p> * I cannot share the source code due Georgia Tech's Honor Code Policy </p>
+      </div>
+      </div>
+
+      <div class="col-md-6 col-sm-12 pt-5">
+        <img class='img-thumbnail' src="images/php.png" width="550" height="500">
+        <h3 class='my-4'>
+          Content Management System
+        </h3>
+        <p>
+          This application is a part of the project I had to implement for the Udemy Course 'The Complete PHP MYSQL Course by Jazeb Akram'. This project is currently a work in progress.
+          With this application, various users can register with the system. All the details are stored in a MySQL database. The users can post blogs, search through the blogs,
+          delete posts, get detailed descriptions about each post etc.
+        </p>
+        <p>
+          <strong>
+            Tech Stack: </strong> PHP, SQL, XAMPP Server, Javascript, HTML, CSS, Bootstrap
+        </p>
+        <div class="container text-center">
+          <a class="btn btn-md btn-outline-secondary" href="https://github.com/es0811/CMS" target="_blank"><i class="fab fa-github"></i> Source</a>
+      </div>
+      </div>
+  </div>
+
+  <div class="container"  id='education'>
+  <div class="row pt-4">
+    <div class="col-md-12 col-xs-12">
+      <hr>
+      <h3 class='my-4 bg-light text-secondary'>Education</h3>
+    </div>
+  </div>
+  </div>
+
+  <div class="container">
+    <div class="row pt-4">
+      <div class="col-md-12">
+        <div class="accordion" id="accordionExample">
+            <div class="card">
+              <div class="card-header" id="headingOne">
+                <h2 class="mb-0">
+                  <button class="btn" type="button" data-toggle="collapse" data-target="#collapseOne">
+                    Collapsible Group Item #1
+                  </button>
+                </h2>
+              </div>
+
+              <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                <div class="card-body">
+                  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header" id="headingTwo">
+                <h2 class="mb-0">
+                  <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    Collapsible Group Item #2
+                  </button>
+                </h2>
+              </div>
+              <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                <div class="card-body">
+                  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header" id="headingThree">
+                <h2 class="mb-0">
+                  <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    Collapsible Group Item #3
+                  </button>
+                </h2>
+              </div>
+              <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                <div class="card-body">
+                  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                </div>
+              </div>
+            </div>
+          </div>
 
       </div>
 
@@ -91,6 +220,9 @@
 
   </div>
 
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
-  </body>
+</body>
 </html>
