--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"> -->
     <script src="https://kit.fontawesome.com/8e99dbf26b.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   </head>
   <body>
 
@@ -173,7 +174,8 @@
               <div class="card-header" id="headingOne">
                 <h2 class="mb-0">
                   <button class="btn" type="button" data-toggle="collapse" data-target="#collapseOne">
-                    Collapsible Group Item #1
+                    <img src="images/gt_logo.png" width="30px" height="30px">
+                    Georgia Institute of Technology
                   </button>
                 </h2>
               </div>
@@ -187,8 +189,9 @@
             <div class="card">
               <div class="card-header" id="headingTwo">
                 <h2 class="mb-0">
-                  <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                    Collapsible Group Item #2
+                  <button class="btn" type="button" data-toggle="collapse" data-target="#collapseTwo">
+                    <img src="images/gec_logo.png" width="30px" height="30px">
+                     Goa College of Engineering
                   </button>
                 </h2>
               </div>
@@ -201,8 +204,8 @@
             <div class="card">
               <div class="card-header" id="headingThree">
                 <h2 class="mb-0">
-                  <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                    Collapsible Group Item #3
+                  <button class="btn" type="button" data-toggle="collapse" data-target="#collapseThree">
+                    <img src="images/udemy_logo.png" width="30px" height="30px"> Udemy
                   </button>
                 </h2>
               </div>
@@ -213,12 +216,34 @@
               </div>
             </div>
           </div>
+      </div>
+    </div>
+  </div>
+  <footer class="page-footer font-small blue">
 
+  <!-- Copyright -->
+  <!-- <div class="footer-copyright text-center py-3">© 2020 Copyright:
+  </div> -->
+  <!-- Copyright -->
+  <div class="container text-center">
+    <div class="row pt-4 mb-4">
+      <div class="col-md-12">
+
+          <div class="container">
+            <a href="https://www.linkedin.com/in/eshitasangodkar/" target="_blank"><img class='thumbnail me-4' src="images/linkedin.png" width="50px" height="50px">
+            </a>
+
+            <a href="https://github.com/es0811"  target="_blank"><img class='thumbnail ms-4' src="images/github-sign.png" width="50px" height="50px">
+          </a>
+          </div>
       </div>
 
     </div>
 
   </div>
+
+
+</footer>
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
