Added gios project

--- a/index.html
+++ b/index.html
@@ -138,21 +138,22 @@
       </div>
 
       <div class="col-md-6 col-sm-12 pt-5">
-        <img class='img-thumbnail' src="images/php.png" width="550" height="500">
+        <img class='img-thumbnail' src="images/DFS.png" width="550" height="500">
         <h3 class='my-4'>
-          Content Management System
+          Distributed File System
         </h3>
         <p>
-          This application is a part of the project I had to implement for the Udemy Course 'The Complete PHP MYSQL Course by Jazeb Akram'. This project is currently a work in progress.
-          With this application, various users can register with the system. All the details are stored in a MySQL database. The users can post blogs, search through the blogs,
-          delete posts, get detailed descriptions about each post etc.
+          This application is a part of the project I had to implement for the Georgia Tech's "Introduction to Operating Systems".
+          This application is very similar to dropbox, where the latest copy of the file is available throughout the multiple clients and the server system.
+          This project introduced us to gRPC, a file tranfer protocol which was developed by google. It also gave us an insight to multi-threading, using of semaphores to achieve isolation
+          and sychronization.
         </p>
         <p>
           <strong>
-            Tech Stack: </strong> PHP, SQL, XAMPP Server, Javascript, HTML, CSS, Bootstrap
+            Tech Stack: </strong> C++, gRPC, Docker, Linux OS
         </p>
-        <div class="container text-center">
-          <a class="btn btn-md btn-outline-secondary" href="https://github.com/es0811/CMS" target="_blank"><i class="fab fa-github"></i> Source</a>
+        <div class="container text-center fw-light text-sm-start fs-6 fst-italic">
+          <p> * I cannot share the source code due Georgia Tech's Honor Code Policy </p>
       </div>
       </div>
   </div>
