--- a/index.html
+++ b/index.html
@@ -176,14 +176,51 @@
                 <h2 class="mb-0">
                   <button class="btn" type="button" data-toggle="collapse" data-target="#collapseOne">
                     <img src="images/gt_logo.png" width="30px" height="30px">
-                    Georgia Institute of Technology
+                    Master's in Computer Science, Georgia Institute of Technology <a href="https://www.gatech.edu/" target="_blank">  <i class="fas fa-external-link-alt" style="color:grey"></i></a>
                   </button>
                 </h2>
               </div>
 
               <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
                 <div class="card-body">
-                  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                  <h2>Overview</h2>
+                  <p>
+                    I am currently enrolled in this program and completed two semesters with a GPA of 4.0.
+                    This program helped me strengthen my software engineering fundamentals and dive into advance topics delated to distributed file systems, multi-threading
+                    software design & architecture etc.
+                    The specialization that I have chosen is Computing Systems and I am on track to finish the program by the end of 2023.
+                    I am very excited to complete the remainder of my course and am confident that the skills, the knowledge and experience I gain from this course will help me
+                    tremendously to excel as a software developer.
+                  </p>
+                  <hr>
+                  <h3>Classes</h3>
+                  <br>
+                  <h4>CS6200 Graduate Intro to Operating Systems</h4>
+                  <p><strong>Final Grade:</strong> A</p>
+                  <p><strong>Instructor:</strong> Ada Gavrilovska ( <a href="https://www.cc.gatech.edu/home/ada/" target="_blank">bio</a> )</p>
+                  <p>
+                    This course teaches basic operating system abstractions, mechanisms, and their implementations.
+                    The core of the course focuses on OS support for concurrency (threads) and synchronization, resource management (CPU, memory, I/O), and distributed services. The practical component of the course teaches multithread programming, inter-process communication, and distributed interactions via RPC.
+
+                  </p>
+
+                  <hr>
+                  <h4>CS6310 Software Architecture and Design</h4>
+                  <p><strong>Final Grade:</strong> A</p>
+                  <p><strong>Instructor:</strong> Spencer Rugaber ( <a href="https://www.cc.gatech.edu/home/spencer/" target="_blank">bio</a> )</p>
+                  <p>
+                    This course provides basic principles and concepts involved in the analysis and design of large software systems. It provides an insight into object oriented design techniques,
+                    develop and evaluate software architectures, express specifications and design using UML.
+                  </p>
+
+                  <hr>
+                  <h4>CS6400 Database Systems Concepts and Design</h4>
+                  <p><strong>Final Grade:</strong> In Progress</p>
+                  <p><strong>Instructor:</strong> Leo Mark ( <a href="https://cyber.gatech.edu/faculty/leo-mark" target="_blank">bio</a> )</p>
+                  <p>
+                    This course presents an example of applying a database application development methodology to a major real-world project. This course provides exposure to learn the Extended Entity Relationship Model, the Relational Model, Relational algebra, calculus and SQL, database normalization, efficiency, and indexing.
+                  </p>
+
                 </div>
               </div>
             </div>
@@ -192,13 +229,43 @@
                 <h2 class="mb-0">
                   <button class="btn" type="button" data-toggle="collapse" data-target="#collapseTwo">
                     <img src="images/gec_logo.png" width="30px" height="30px">
-                     Goa College of Engineering
+                     Bachelor's in Electronic & Telecommunication Engineering, Goa College of Engineering <a href="http://www.gec.ac.in/" target="_blank">  <i class="fas fa-external-link-alt" style="color:grey"></i></a>
                   </button>
                 </h2>
               </div>
               <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
                 <div class="card-body">
-                  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                  <p>
+                    In 2010, I pursued my dream to become an Engineer in the field that always intrigued me, in Electronics and Telecommunication.
+                    This program gave me an insight into the fundamentals of electronics allowing me to work with semiconductor chips, instruments, machine level programming,
+                    network protocols etc. It gave me a basic foundatation of computer hardware and its working, operating systems, introduced me to high level programming languages.
+                    I will list down some of the core subjects here.
+                  </p>
+                  <hr>
+                  <h3>Classes</h3>
+                  <br>
+                  <h4>C and C++ Programming</h4>
+                  <p><strong>Final Grade:</strong> A</p>
+                  <p><strong>Instructor:</strong> Chetan Desai ( <a href="http://www.gec.ac.in/Employe_ProfileNew.aspx?nDeptID=1235&PageId=1" target='_blank'>bio</a> )</p>
+                  <p>
+                    This course gave us an introduction to the fundamentals of programming using C and fundamentals of object oriented programming using C++.
+                  </p>
+                  <hr>
+                  <h4>Datastructures using C++</h4>
+                  <p><strong>Final Grade:</strong> A</p>
+                  <p><strong>Instructor:</strong> Chetan Desai ( <a href="http://www.gec.ac.in/Employe_ProfileNew.aspx?nDeptID=1235&PageId=1" target="_blank">bio</a> )</p>
+                  <p>
+                    This program gave us a introduction to the fundamentals of Datastructures like Arrays, LinkedLists, Trees, Heap, Queues using C++.
+                  </p>
+                  <hr>
+                  <h4>Computer Oriented Numerical Techniques</h4>
+                  <p><strong>Final Grade:</strong> A</p>
+                  <p><strong>Instructor:</strong> Nayana Shenvi ( <a href="http://www.gec.ac.in/Department_FacultyProfile.aspx?nDeptID=1238" target="_blank">bio</a> )</p>
+                  <p>
+                    This program gave us an indepth understanding of algorithms used to solve numerical problems, learn about artifical intelligence and methods implemented to
+                    train a system based on the data given.
+                  </p>
+
                 </div>
               </div>
             </div>
@@ -212,7 +279,46 @@
               </div>
               <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
                 <div class="card-body">
-                  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                  <p>
+                    Udemy has always been a constant source of information for me where I have taken up several classes to hone my skills, learn the skills which are in demand.
+                    I am listing some of the courses which I have enrolled here.
+                  </p>
+                  <hr>
+                  <h3>Classes</h3>
+                  <br>
+                  <h4>Mastering Data Structures & Algorithms using C and C++</h4>
+                  <p><strong>Status:</strong> Completed</p>
+                  <!-- <p><strong>Course Link: <a href="https://www.udemy.com/course/datastructurescncpp/"><i class="fas fa-external-link-alt" style="color:grey"></i></a></p> -->
+                  <p><strong>Course Link:</strong> <a href="https://www.udemy.com/course/datastructurescncpp/" target="_blank"><i class="fas fa-external-link-alt" style="color:grey"></i></a></p>
+                  <p><strong>Course Certificate:</strong> <a href="https://www.udemy.com/certificate/UC-aeb7cb90-8685-4580-b380-b2a09061610a/" target="_blank"><i class="fas fa-external-link-alt" style="color:grey"></i></a></p>
+
+                  <hr>
+                  <h4>The Complete Python Bootcamp</h4>
+                  <p><strong>Status:</strong> Completed</p>
+                  <p><strong>Course Link:</strong> <a href="https://www.udemy.com/course/complete-python-bootcamp/"><i class="fas fa-external-link-alt" style="color:grey"></i></a></p>
+                  <p><strong>Course Certificate:</strong> <a href="https://www.udemy.com/certificate/UC-1c0ccb4b-a7fc-40db-a8aa-5c18d897aedf/" target="_blank"><i class="fas fa-external-link-alt" style="color:grey"></i></a></p>
+                  <hr>
+
+
+                  <h4>The Complete SQL Bootcamp</h4>
+                  <p><strong>Status:</strong> Completed</p>
+                  <p><strong>Course Link:</strong> <a href="https://www.udemy.com/course/the-complete-sql-bootcamp/"><i class="fas fa-external-link-alt" style="color:grey"></i></a></p>
+                  <p><strong>Course Certificate:</strong> <a href="https://www.udemy.com/certificate/UC-2c4dea26-223e-42b0-a229-f68d4a00985d/" target="_blank"><i class="fas fa-external-link-alt" style="color:grey"></i></a></p>
+                  <hr>
+
+                  <h4>Python and Django Full Stack Bootcamp</h4>
+                  <p><strong>Status:</strong> Ongoing</p>
+                  <p><strong>Course Link:</strong> <a href="https://www.udemy.com/course/python-and-django-full-stack-web-developer-bootcamp/" target="_blank"><i class="fas fa-external-link-alt" style="color:grey"></i></a></p>
+                  <!-- <p><strong>Course Certificate:</strong> <a href="https://www.udemy.com/certificate/UC-2c4dea26-223e-42b0-a229-f68d4a00985d/" target="_blank"><i class="fas fa-external-link-alt" style="color:grey"></i></a></p> -->
+                  <hr>
+
+                  <h4>The Complete MySQL and PHP Professional Course</h4>
+                  <p><strong>Status:</strong> Ongoing</p>
+                  <p><strong>Course Link:</strong> <a href="https://www.udemy.com/course/the-complete-php-mysql-professional-course/" target="_blank"><i class="fas fa-external-link-alt" style="color:grey"></i></a></p>
+                  <!-- <p><strong>Course Certificate:</strong> <a href="https://www.udemy.com/certificate/UC-2c4dea26-223e-42b0-a229-f68d4a00985d/" target="_blank"><i class="fas fa-external-link-alt" style="color:grey"></i></a></p> -->
+                  <hr>
+
+
                 </div>
               </div>
             </div>
