--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <a class="nav-link active" aria-current="page" href="#education">Education</a>
               </li>
               <li class='nav-item'>
-                <a class="nav-link active" aria-current="page" href="#">Resume</a>
+                <a class="nav-link active" aria-current="page" href="resume/Eshita_Sangodkar_Resume.pdf" target="_blank">Resume</a>
               </li>
             </ul>
           </div>
